--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.8.2",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
